--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
     </script>
 </head>
 
-<body>
+<body class="bg-sky-950">
     <div id="app"></div>
     <script type="module" src="/src/main.js"></script>
 </body>
