Stored by Vue Play 1690377404703

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="description" content="Design .vue files with Less Code using Transform Tools and Style Controllers. Drag & Drop Elements and Components into the Playground with Vue Play." />
     <meta name="keywords" content="Vue Play Playground Vue.js Vuejs Drag Drop Design UI Visual Graphic User Interface" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta property="og:image" content="https://www.vueplay.com/screenshot.png" />
+    <meta property="og:image" content="https://vueplay.com/screenshot.png" />
     <meta property="og:title" content="Vue Play - The Ultimate Drag and Drop Designer for Vue" />
     <meta property="og:description" content="Design .vue files with Less Code using Transform Tools and Style Controllers. Drag & Drop Elements and Components into the Playground with Vue Play." />
     <meta property="og:image:width" content="1550" />
@@ -19,7 +19,7 @@
     <link rel="mask-icon" href="safari-pinned-tab.svg" color="#5bbad5">
     <meta name="msapplication-TileColor" content="#da532c">
     <meta name="theme-color" content="#ffffff">
-    <link rel="canonical" href="https://www.vueplay.com">
+    <link rel="canonical" href="https://vueplay.com">
     <link rel="icon shortcut" type="image/x-icon" href="favicon.ico">
     <!-- Google tag (gtag.js) -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-Q48VZK3Y3Y"></script>
