Stored by Vue Play 1690797493977

--- a/index.html
+++ b/index.html
@@ -12,14 +12,14 @@
     <meta property="og:description" content="Design .vue files with Less Code using Transform Tools and Style Controllers. Drag & Drop Elements and Components into the Playground with Vue Play." />
     <meta property="og:image:width" content="1550" />
     <meta property="og:image:height" content="605" />
-    <link rel="apple-touch-icon" sizes="180x180" href="apple-touch-icon.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="favicon-16x16.png">
-    <link rel="manifest" href="site.webmanifest">
-    <link rel="mask-icon" href="safari-pinned-tab.svg" color="#5bbad5">
+    <link rel="apple-touch-icon" sizes="180x180" href="https://vueplay.com/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="https://vueplay.com/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="https://vueplay.com/favicon-16x16.png">
+    <link rel="manifest" href="https://vueplay.com/site.webmanifest">
+    <link rel="mask-icon" href="https://vueplay.com/safari-pinned-tab.svg" color="#5bbad5">
     <meta name="msapplication-TileColor" content="#da532c">
     <meta name="theme-color" content="#ffffff">
-    <link rel="icon shortcut" type="image/x-icon" href="favicon.ico">
+    <link rel="icon shortcut" type="image/x-icon" href="https://vueplay.com/favicon.ico">
     <!-- Google tag (gtag.js) -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-Q48VZK3Y3Y"></script>
     <script>
